hard-gists/5502087/run.log
=== Docker Run Log for 5502087 ===
Started at: Mi 29. Okt 15:43:36 CET 2025

[2025-10-29 15:43:36] START: Running container for 5502087
[2025-10-29 15:43:36] SUCCESS: Container 573d96accff2cd9e3aeda990edc918ad3da081a6b67b1c472c26f818c907bcac started for 5502087
=== Container logs for 5502087 ===
  File "/snippet.py", line 20
    print srcs
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5502087 ===
[2025-10-29 15:43:38] INFO: Container 573d96accff2cd9e3aeda990edc918ad3da081a6b67b1c472c26f818c907bcac has stopped
